fix path to files

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
            <header class='container'>
                <div class='row'>
                    <div class='col_7 logo' role='logo'>
-                        <img src='/img/cmg-logo.png' class='center' />
+                        <img src='img/cmg-logo.png' class='center' />
                     </div>
                     <nav class='col_2'>
                         <ul class="button-group center">
