added float number of slide

--- a/index.html
+++ b/index.html
@@ -272,7 +272,9 @@
                         
                             <div class = 'slide item1 hasModal'>
                                 <div class='inner'>
-                                    <img src='img/row3/cmg-About-US.png'>
+                                    <div class='img-container'>
+                                        <img src='img/row3/cmg-About-US.png'>
+                                    </div>
                                     <div class='description'>
                                        About Us
                                    </div>
