--- a/index.html
+++ b/index.html
@@ -469,6 +469,9 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
         <!-- <script src="//code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
         <script>window.jQuery.mobile || document.write('<script src="js/vendor/jquery.mobile-1.2.0.min.js"><\/script>')</script> -->
+         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+        <script>window.jQuery.easing || document.write('<script src="js/vendor/jquery.easing.js"><\/script>')</script>
+        
 
         <!-- helper for mobile -->
         <script src="js/helper.js"></script>
@@ -479,18 +482,13 @@
 
          <script type ='text/javascript' src ='js/vendor/highlight.js'></script>
 
-         <script type ='text/javascript' src ='js/vendor/jquery.easing.js'></script>
-
         <!-- some js tools such as modal, tooltip... -->
         <script src="js/vendor/modal.js"></script>
 
-        <script type='application/javascript' src='js/vendor/fastClick.js'></script>
         <!-- my configs -->
-        <script src="js/main.js"></script>
+        <script src="js/main.min.js"></script>
 
-        <!-- queries for javascript -->
-        <script src="js/vendor/enquire.js"></script>
-        <script src="js/media-queries.js"></script>
+
 
 
 
