removed refresh because of overload

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
         <!-- my media queries -->
         <link rel="stylesheet" href="css/34gs-queries.css">
         <!-- to remove once on prod -->
+         <!-- remove it in prod
         <script type="text/javascript" src="js/vendor/css-refresh.js"></script>
-
+        -->
         <!-- modernizr -->
         <script src="js/vendor/modernizr-2.6.1.min.js"></script>
 
